--- a/ADM_HW3.ipynb
+++ b/ADM_HW3.ipynb
@@ -6,7 +6,7 @@
       "name": "ADM_HW3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsYLkAkc4Xr9U5ciTDS4Wh",
+      "authorship_tag": "ABX9TyMA/K5lsTlbXMoyhJRJYLq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xaZ85K0F6ndh"
+        "id": "xaZ85K0F6ndh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90d51e1f-1821-4d38-b782-674e59c06375"
+      },
+      "source": [
+        "from google.colab import drive, files\n",
+        "drive.mount('/content/drive', force_remount = True)\n",
+        "import sys\n",
+        "sys.path.append('/content/drive/ADM/homework3')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KA96VDx47mnW"
       },
       "source": [
         ""
